# litterbot

./: .gitignore  README.md  pyproject.toml
src/litterbot/: __init__.py  account.py  cli.py  mcp_server.py  robot.py
